refactor: use WeakMap for client singleton, ignore gql files in biome
  - replace string hash cache with WeakMap keyed on rate limiter
  - auto-GC client when env released
  - exclude cloudflare/gql files from biome checks

--- a/biome.json
+++ b/biome.json
@@ -11,7 +11,9 @@
 			"**",
 			"!worker-configuration.d.ts",
 			"!src/gql/graphql-env.d.ts",
-			"!src/gql/schema.gql"
+			"!src/gql/schema.gql",
+			"!src/cloudflare/gql/graphql-env.d.ts",
+			"!src/cloudflare/gql/schema.gql"
 		]
 	},
 	"formatter": {
